# gnome3-app-book

./: underline.patch
codes/hello-vala/: .anjuta_sym_db.db  Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
codes/hello-vala/.anjuta/session/: anjuta.session  dock-layout.xml
codes/hello-vala/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
codes/hello-vala/src/: Makefile  Makefile.am  Makefile.in  book.c  book.vala  hello_vala  hello_vala.c  hello_vala.vala
codes/hello-vala/src/.deps/: book.Po  hello_vala.Po
codes/vala/: book.vala  bookstore.vala  hello-vala  hello-vala.vala
contents/: 1-chapter7.md
